2012-02-01  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (lookup_sym_lisp1): New function.
	(do_eval, do_eval_args): New static functions.
	(eval, eval_args): Become wrappers for do_eval and do_eval_args,
	respectively.
	(eval_lisp1, eval_args_lisp1): New static functions.
	(dwim_loc, op_dwim): Use eval_lisp1 and eval_args_lisp1 instead
	of eval and eval_args.

	* parser.y (meta_expr): Bugfix: expand the whole dwim expression,
	rather than its arguments, which are not an expression.

	* txr.1: Updated with notes that dwim really does Lisp-1 style
	evaluation.

2012-01-29  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: More color categories. More accurate matching of @ elements.

2012-01-27  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Support hex and octal escapes in string and quasiliterals,
	as the documentation says. Also support an optional trailing ;
	delimiter in hex escapes.

	* txr.1: Documented.

2012-01-27  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Properly show @[...] inside quasiliteral.

2012-01-27  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (dwim_loc, op_dwim): Relax the requirement on hash
	indexing arguments. The default value can be omitted,
	defaulting to nil.

2012-01-27  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (hash_begin): Missing type check added, otherwise
	passing in an object that is not a hash results in corruption
	or crashing behavior.

	* lib.c (class_check): Improved to a one-step check with a clear
	message.

2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	Version 55

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_modplace): Fix warning caught by gcc, but not g++.

	* lib.c (replace_list): Fix code that is valid C++ but not C.

2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (replace_list): Always convert the input items to a list,
	even in the trivial case that an empty list is being replaced.