@@ -1,3 +1,9 @@
+2012-02-02  Kaz Kylheku  <kaz@kylheku.com>
+
+	* match.c (format_field): Regression. Was not handling modifiers
+	which are compound expression (e.g. computed field widths).
+	This was broken by the first commit of 2012-01-26.
+
 2012-02-01  Kaz Kylheku  <kaz@kylheku.com>
 
 	* eval.c (lookup_sym_lisp1): New function.
